--- a/customer-management/.classpath
+++ b/customer-management/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/Users/Ferdis/Downloads/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/Users/Ferdis/Downloads/jsp-api-2.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
